<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Login.SignInActivity" >

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/Lottie"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="@dimen/_110sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_centerHorizontal="true"
        app:lottie_rawRes="@raw/open_door"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_below="@id/Lottie"
        android:textColor="@color/hitam" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:layout_alignParentBottom="true"
        android:background="@color/biru" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textAlignment="center"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:hint="@string/email"
                android:nextFocusUp="@id/edt_email"
                android:nextFocusLeft="@id/edt_email"
                android:background="@drawable/edit_text"
                android:fitsSystemWindows="true"/>

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textAlignment="center"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:inputType="textPassword"
                android:imeOptions="actionGo"
                android:hint="@string/password"
                android:nextFocusUp="@id/edt_email"
                android:nextFocusLeft="@id/edt_email"
                android:background="@drawable/edit_text" />

            <TextView
                android:id="@+id/edt_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_gravity="end"
                android:layout_marginRight="@dimen/_28sdp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40ssp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:text="@string/Btn_login"
                android:background="@drawable/button" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_30ssp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account"
            android:textSize="16sp"
            android:textColor="@color/hitam" />

        <TextView
            android:id="@+id/txt_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_3sdp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:text="@string/sign_in"
            android:textSize="17sp"
            android:textColor="@color/hitam"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>