<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/biru"
    tools:context=".Profile.EditProfile.EditProfileActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:src="@drawable/ic_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Profile"
                android:textSize="@dimen/_19ssp"
                android:textColor="@color/hitam"
                android:textStyle="bold"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_350sdp"
        android:layout_centerInParent="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:translationY="@dimen/_15sdp"
            android:orientation="vertical" >

        <EditText
            android:id="@+id/email_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:hint="@string/email"
            android:textColor="@color/hitam"
            android:enabled="false"
            android:nextFocusUp="@id/email_profile"
            android:nextFocusLeft="@id/email_profile"
            android:background="@drawable/edit_text" />

        <EditText
            android:id="@+id/nama_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:hint="@string/nama"
            android:textColor="@color/hitam"
            android:enabled="false"
            android:nextFocusUp="@id/nama_profile"
            android:nextFocusLeft="@id/nama_profile"
            android:background="@drawable/edit_text" />

        <EditText
            android:id="@+id/no_telp_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:hint="@string/no_hp"
            android:textColor="@color/hitam"
            android:nextFocusUp="@id/no_telp_profile"
            android:nextFocusLeft="@id/no_telp_profile"
            android:background="@drawable/edit_text" />

            <EditText
                android:id="@+id/tanggal_lhr_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:imeOptions="actionNext"
                android:hint="@string/tanggal_lahir"
                android:textColor="@color/hitam"
                android:nextFocusUp="@id/tanggal_lhr_profile"
                android:nextFocusLeft="@id/tanggal_lhr_profile"
                android:background="@drawable/edit_text" />

            <EditText
                android:id="@+id/alamat_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:imeOptions="actionNext"
                android:hint="@string/alamat"
                android:textColor="@color/hitam"
                android:nextFocusUp="@id/tanggal_lhr_profile"
                android:nextFocusLeft="@id/tanggal_lhr_profile"
                android:background="@drawable/edit_text" />

            <Spinner
                android:id="@+id/jns_klmin_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:nextFocusUp="@id/jns_klmin_profile"
                android:nextFocusLeft="@id/jns_klmin_profile"
                android:entries="@array/Jenis_kelamin"
                android:background="@drawable/edit_text" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button2"
        android:text="Simpan"
        android:textColor="@color/hitam"
        android:textStyle="bold"
        android:textSize="@dimen/_15ssp"/>

</RelativeLayout>