<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register.RegisterActivity"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/biru" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_140sdp"
        android:background="@color/putih">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:textColor="@color/hitam"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/_20sdp">

            <EditText
                android:id="@+id/res_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:hint="@string/nama"
                android:textColor="@color/hitam"
                android:nextFocusUp="@id/res_nama"
                android:nextFocusLeft="@id/res_nama"
                android:background="@drawable/edit_text" />

            <EditText
                android:id="@+id/res_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:inputType="textWebEmailAddress"
                android:imeOptions="actionNext"
                android:hint="@string/email"
                android:textColor="@color/hitam"
                android:nextFocusUp="@id/res_email"
                android:nextFocusLeft="@id/res_email"
                android:background="@drawable/edit_text" />

            <EditText
                android:id="@+id/res_no_telp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:hint="@string/no_hp"
                android:textColor="@color/hitam"
                android:nextFocusUp="@id/res_no_telp"
                android:nextFocusLeft="@id/res_no_telp"
                android:background="@drawable/edit_text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/laypass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="@+id/editText3"
            app:layout_constraintStart_toStartOf="@+id/editText3"
            app:layout_constraintTop_toBottomOf="@+id/editText3"
            tools:ignore="MissingConstraints" >

            <EditText
                android:id="@+id/res_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:hint="@string/password"
                android:textColor="@color/hitam"
                android:nextFocusUp="@id/res_pass"
                android:nextFocusLeft="@id/res_pass"
                android:background="@drawable/edit_text"
                android:paddingRight="@dimen/_50sdp"
                android:password="true" />

            <ImageView
                android:id="@+id/show_pass_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:alpha=".5"
                android:onClick="ShowHidePass"
                android:padding="5dp"
                android:src="@drawable/ic_show"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/laypass"
                app:layout_constraintTop_toTopOf="@+id/res_pass" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_70sdp"
            android:background="@drawable/button"
            android:text="@string/daftar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:textAlignment="center"
            android:text="Dengan mendaftar akun ini, anda setuju dengan"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/syarat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="Syarat dan Ketentuan"
            android:textSize="@dimen/_13sdp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:ems="10"/>

    </LinearLayout>
</LinearLayout>