<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih" >

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_230sdp"
        android:background="@color/biru" />

    <RelativeLayout
        android:id="@+id/foto_profile"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@+id/toolbar_profile"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bulat_putih">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_109sdp"
            android:layout_height="@dimen/_90sdp"
            android:src="@drawable/person"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/foto_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Moch.farhan Ahadi"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/hitam"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="farhanahadi17@gmail.com"
            android:textColor="@color/mini_title_profile"
            android:textSize="12sp"/>
    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_profile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@color/biru">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_black"
                android:paddingTop="@dimen/_2sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/putih"
                android:textStyle="bold"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@+id/frame" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:text="Profile"
                android:textColor="@color/mini_title_profile"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:drawableLeft="@drawable/ic_edit_profile"
                android:drawableRight="@drawable/ic_more"
                android:drawablePadding="@dimen/_20sdp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/edit_profile"
                android:textColor="@color/miniTitle"
                android:textStyle="bold"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/ganti_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_edit_password"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:text="@string/change_password"
                android:drawableRight="@drawable/ic_more"
                android:drawablePadding="@dimen/_20sdp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textColor="@color/miniTitle"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regional"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/mini_title_profile"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/history_booking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_history"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:text="@string/history_booking"
                android:drawableRight="@drawable/ic_more"
                android:drawablePadding="@dimen/_20sdp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textColor="@color/miniTitle"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/logout_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:drawableRight="@drawable/ic_more"
                android:drawablePadding="@dimen/_20sdp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textColor="@color/miniTitle"
                android:textStyle="bold"
                android:textSize="15sp"
                android:drawableLeft="@drawable/ic_logout"
                android:text="@string/logout" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/mini_title_profile"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="App ver 1.0.0"
                android:textAlignment="center"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>